logs/kraken_depth.log
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 159, in _get_module_details
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/textolytics/nbpy/nbpy/zmq/publishers/kraken_depth.py", line 46
    from python.scripts.zmq.pub_kraken_depth import *
                                                    ^
SyntaxError: import * only allowed at module level
Traceback (most recent call last):
  File "<frozen runpy>", line 189, in _run_module_as_main
  File "<frozen runpy>", line 112, in _get_module_details
  File "/home/textolytics/nbpy/nbpy/zmq/__init__.py", line 18, in <module>
    from .ports import (
    ...<17 lines>...
    )
  File "/home/textolytics/nbpy/nbpy/zmq/ports.py", line 197, in <module>
    'kraken_influxdb_tick_sub': KRAKEN_INFLUXDB_TICK_SUB,
                                ^^^^^^^^^^^^^^^^^^^^^^^^
NameError: name 'KRAKEN_INFLUXDB_TICK_SUB' is not defined. Did you mean: 'KRAKEN_INFLUXDB_DEPTH_SUB'?
/home/textolytics/nbpy/nbpy/bin/python: Error while finding module specification for 'nbpy.zmq.publishers.kraken_depth' (ModuleNotFoundError: No module named 'nbpy.zmq')
/home/textolytics/nbpy/nbpy/bin/python: Error while finding module specification for 'nbpy.zmq.publishers.kraken_depth' (ModuleNotFoundError: No module named 'nbpy.zmq')
/home/textolytics/nbpy/nbpy/bin/python: Error while finding module specification for 'nbpy.zmq.publishers.kraken_depth' (ModuleNotFoundError: No module named 'nbpy.zmq')
